# stella

./: .gitignore  Cargo.toml  DEPLOY.md  README.md  package.json
.github/workflows/: build-contract.yml
backend/: .env.example  .env.production  .gitignore  package.json  vercel.json
backend/api/: serverless.js
backend/src/: app.js  index.js
backend/src/config/: index.js
backend/src/db/: index.js  migrate.js
backend/src/db/migrations/: 001_initial_schema.js  002_anchor_capability_index.js  003_asset_registry_extensions.js
backend/src/lib/: horizon.js  logger.js
backend/src/plugins/: errorHandler.js
backend/src/routes/: anchors.js  assetIdentifiers.js  assets.js  graph.js  health.js  index.js  quotes.js  registry.js  routes.js  sep10.js  sep24.js  trustlines.js
backend/src/services/account/: trustlineChecker.js
backend/src/services/anchor/: anchorHealth.js  anchorIndexer.js  anchorRepository.js  crawlScheduler.js  directoryDiscovery.js  horizonValidator.js  (+4 more)
contracts/: DEPLOY.md
contracts/route-integrity-registry/: Cargo.toml  README.md
contracts/route-integrity-registry/src/: lib.rs
frontend/: .env.example  .env.production  .gitignore  index.html  package.json  vercel.json  vite.config.js
frontend/src/: App.jsx  api.js  hooks.js  index.css
frontend/src/components/: AdminLayout.jsx  EnhancedRouteFinder.jsx  ErrorBoundary.jsx  InteractiveFlowLauncher.jsx  Layout.jsx  Toast.jsx  WalletConnect.jsx
frontend/src/pages/: Anchors.jsx  Assets.jsx  Dashboard.jsx  GraphExplorer.jsx  Home.jsx  NotFound.jsx  RouteFinder.jsx  RouteVerification.jsx
(+23 files in other folders)
