[package]
name = "route-integrity-registry"
version = "1.0.0"
edition = "2021"
description = "Stella Protocol RouteIntegrityRegistry - A non-custodial registry for routing transparency"
license = "MIT"
repository = "https://github.com/Amitesh007z/stella"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { version = "21.0.0" }

[dev-dependencies]
soroban-sdk = { version = "21.0.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
